--- a/Untitled19.ipynb
+++ b/Untitled19.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJsODTzaDY7V6sCmw3n6oS",
+      "authorship_tag": "ABX9TyNb6AqJHheEebEKHHiLNsRP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,18 +34,16 @@
       },
       "outputs": [],
       "source": [
-        "#include <iostream>\n",
-        "Main()\n",
-        "{\n",
-        "int a,b,c,max;\n",
-        "Cin >>a>>b>>c;\n",
-        "max=a;\n",
-        "if(b>max)\n",
-        "   max = b;\n",
-        "if(c>max)\n",
-        "   max = c;\n",
-        "Cout<<max;\n",
-        "}"
+        "class x:\n",
+        "     def test(self,k=10,p=10):\n",
+        "       if(k!=10 and p!=10):\n",
+        "        self.k=k\n",
+        "        self.p=p\n",
+        "        return k*p\n",
+        "       elif(k is not 10 and p==10):\n",
+        "        return 3.14*k*k\n",
+        "       else :\n",
+        "        return 100"
       ]
     }
   ]
